[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyblur"
version = "1.0.0"
description = "Image blurring routines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "lospooky", email = "my.accounts@gmx.se" }]
keywords = ["blur", "image", "convolution"]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21",
    "pillow>=9.0",
    "scikit-image>=0.20",
    "scipy>=1.7",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/lospooky/pyblur"
Repository = "https://github.com/lospooky/pyblur"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyblur = ["*.npz", "py.typed"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=pyblur",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["src/pyblur"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ty",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]



